[package]
name = "async-oidc-jwt-validator"
version = "0.1.0"
edition = "2021"
description = "OIDC"
repository = "https://github.com/soya-miyoshi/async-oidc-jwt-validator"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
